# clean_code_tutorial

./: LICENSE  README.md  main.py  pyproject.toml
tests/: test_dummy.py
